Add support to read columnar profile data from pp_power_profile_mode

RX 7600 introduced a new data format structured where power profiles are defined
in columns. The supported data format was included on Linux 6.11[1].

See #447.

[1] https://gitlab.freedesktop.org/drm/amd/-/issues/3543